[project]
name = "Aitho_MultiRole_Interview_Exam_Agent"
version = "0.1"
description = "AI multirole interviewer, powered by OpenAI"
authors = [{name="Elvio Santangelo"}]
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.86.0)",
    "mcp (>=1.9.3)",
    "langchain-text-splitters (>=0.3.8)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.marimo.runtime]
dotenv = [".env"]