[project]
name = "Aitho_MultiRole_Interview_Exam_Agent"
version = "1.0.0"
description = "AI multirole interviewer and exam simulator powered by OpenAI"
readme = "README.md"
authors = [{name="Elvio Santangelo"}]
requires-python = ">=3.11"
keywords = [
  "AI", "LLM", "marimo", "langchain", "interview", "exam", "agent"
]
dependencies = [
  "marimo>=0.13.15",
  "openai>=1.86.0",
  "langchain>=0.3.25",
  "langchain-community>=0.0.1"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.marimo.runtime]
dotenv = [".env"]